# libtorch_httpservice

./: .gitignore  CMakeLists.txt  Inference.cpp  Inference.h  main.cpp
server/: handler.cpp  handler.h
